# chianti

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  build-browser-extension.sh  build-firefox-extension.sh  build-image.sh  build.sh  chianti-chrome.crx  chianti-firefox.xpi  diesel.toml  dockerfile  export_bindings.sh  installer.sh  ts-rs.toml
.cargo/: config.toml
browser-extension/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
browser-extension/src/: background.ts  content.ts  manifest.json  popup.css  popup.html  popup.ts  types.d.ts
browser-extension/src/content-utils/: index.ts  (+2 more)
common/: index.d.ts  package.json
common/bindings/: CreateWatchHistory.ts
firefox-extension/: biome.json  eslint.config.mjs  manifest.json  package.json  pnpm-lock.yaml  tsconfig.json
firefox-extension/src/: background.js  background.ts  content.js  content.ts  manifest.json  popup.html  popup.js  popup.ts  types.d.ts
migrations/2025-07-07-003037_init/: down.sql  up.sql
scripts/: README.md  build-browser-extension.sh  build-image.sh  export_bindings.sh  generate_data.py  installer.sh  requirements.txt
scripts/generate_data/: README.md  pyproject.toml
src/: api_prelude.rs  apply_sort.rs  main.rs  schema.rs  state.rs  unixepoch_macros.rs  utils.rs
src/database/: connection.rs  models.rs
src/routes/: channel_avater.rs  mod.rs  ping.rs  video_thumbnail.rs  watch_history.rs
ts-bindings/: Channel.ts  ChannelResponse.ts  ChannelWithVideosResponse.ts  CreateWatchHistoryRequest.ts  GetVideosResponse.ts  GetWatchHistoryResponse.ts  OverviewResponse.ts  PaginatedResponse.ts  Video.ts  VideoResponse.ts  WatchHistoryResponse.ts  index.d.ts  index.ts  package.json
ts-bindings/bindings/: CreateWatchHistoryChannel.ts  CreateWatchHistoryRequest.ts  CreateWatchHistoryVideo.ts
web/: package.json  vite.config.ts
(+24 files in other folders)
