[package]
name = "chianti"
description = "Youtube watch time tracker server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["tracing"] }
diesel = { version = "2.2.11", features = [
    "r2d2",
    "returning_clauses_for_sqlite_3_35",
    "sqlite",
] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
nanoid = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
