[package]
name = "chianti"
description = "Youtube watch time tracker server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["tracing"] }
axum-extra = { version = "0.10.1", features = ["query"] }
base64 = "0.22.1"
clap = { version = "4.5.41", features = ["derive"] }
diesel = { version = "2.2.11", features = [
    "r2d2",
    "returning_clauses_for_sqlite_3_35",
    "sqlite",
] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
image = "0.25.6"
mime_guess = "2.0.5"
nanoid = "0.4.0"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io"] }
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ts-rs = { git = "https://github.com/Aleph-Alpha/ts-rs", branch = "feat/cli" }
utoipa = { version = "5.4.0", features = ["axum_extras", "macros"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
